--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -14,8 +14,36 @@
 }
 
 .nav__btn {
+  position: relative;
 }
 
 .nav__link {
   color: #2e363e;
+  position: relative;
+}
+
+.nav__notification {
+  background-color: tomato;
+  width: 25px;
+  height: 25px;
+  border-radius: 12.5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: 600px;
+  position: absolute;
+  left: 15px;
+  bottom: 15px;
+}
+
+.nav__noti {
+  background-color: tomato;
+  border-radius: 4px;
+  width: 8px;
+  height: 8px;
+  display: flex;
+  position: absolute;
+  left: 30px;
+  bottom: 30px;
 }
