--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -8,6 +8,7 @@
 .screen-header__title {
   font-size: 28px;
   font-weight: 600;
+  font-family: "Open Sans", sans-serif;
 }
 
 .screen-header__icons span {
