--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,16 @@
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
+@import "components/user-component.css";
 
 /* SCREEN */
 
 @import "screen/login.css";
+@import "/css/reset.css";
+@import "screen/friends.css";
 
-* {
+body {
+  color: #2e363e;
   font-family: "Open Sans", sans-serif;
 }
 a {
