--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,14 @@
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-component.css";
+@import "components/badge.css";
 
 /* SCREEN */
 
 @import "screen/login.css";
 @import "/css/reset.css";
 @import "screen/friends.css";
+@import "screen/find.css";
 
 body {
   color: #2e363e;
